packages/typ/tests/fixtures/diagnostics/0039_core_not_int_04.ml.infer.expected
File "0039_core_not_int_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0039_core_not_int_04 is not a valid module name.

File "0039_core_not_int_04.ml", line 2, characters 17-18:
2 | let bad () = not 0
                     ^
Error: The constant 0 has type int but an expression was expected of type
         bool
